tests/fixtures/invalid/multi/module_import_alias/main.gcl
// Module import with alias
import constants as c;

dim Acceleration = Length / Time^2;

node g: Acceleration = @c.g0;
